--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
+  <title>Noise Reduction</title>
 </head>
 <style>
 
