--- a/templates/view.html
+++ b/templates/view.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Noise Reduction</title>
+  <link rel="shortcut icon" type="image/png" href="static/favicon.png"/>  
 </head>
 
 <style type="text/css">
